Moved graphs to flex layout to use the layout component of d3fc, stop legend triggering a rerender when content is unchanged. (+5 squashed commit)
Squashed commit:

[651e3fa] Moved charts to a single flex container to make use of d3fc layout() function in order to remove access to DOM by nav and zoom.

[c00cca1] Add requestAnimationFrame around rendering

[02b0c92] stop legend rerendering when content is unchanged.

[3467e51] use d3fc 2.0.0

[92c9538] changed to d3fc 1.5 and moved constant outside of primary render (+3 squashed commit)

Squashed commit:

[02b0c92] stop legend rerendering when content is unchanged.

[3467e51] use d3fc 2.0.0

[92c9538] changed to d3fc 1.5 and moved constant outside of primary render (+1 squashed commits)

Squashed commits:

[92c9538] changed to d3fc 1.5 and moved constant outside of primary render

--- a/src/assets/styles/base.less
+++ b/src/assets/styles/base.less
@@ -15,7 +15,7 @@ html, body {
   height: 100%;
 }
 
-.chart {
+.secondary-container {
   height: 100%;
   width: 100%;
   rect.foreground {
