--- a/src/assets/styles/navigator.less
+++ b/src/assets/styles/navigator.less
@@ -1,8 +1,5 @@
-.nav-row {
-  height: @navigator-height;
-}
-
-.nav {
+#navbar-container {
+    min-height: @navigator-height;
   .extent {
     stroke: @navigator-extent-colour;
     fill-opacity: 0.125;
