--- a/src/assets/styles/variables.less
+++ b/src/assets/styles/variables.less
@@ -33,6 +33,9 @@
 // Seperator
 @head-border-width: 2px solid;
 @head-border-colour: #b0c4de;
+@head-padding-top: 10px;
+@head-padding-bottom: 8px;
+@head-margin-bottom: 10px;
 
 // Sidebar
 @bootstrap-padding-width: 15px;
